--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,212 @@
-/*# sourceMappingURL=index.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&family=Raleway:ital,wght@1,500&family=Roboto+Condensed:wght@300&family=Roboto:wght@300&display=swap");
+html {
+  margin: 0%;
+}
+
+body {
+  margin: 0%;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #c19A6b;
+  margin: 0%;
+  width: 100%;
+  height: 60px;
+}
+.nav__logo {
+  font-family: "Raleway", sans-serif;
+  font-size: 2em;
+  text-decoration: none;
+  color: #4A2c2a;
+}
+.nav__logo--image {
+  height: 60px;
+}
+.nav__list {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 4%;
+  margin-right: 5%;
+}
+.nav__links {
+  list-style: none;
+}
+.nav__link {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  color: #4A2c2a;
+}
+.nav__link:hover {
+  border-bottom: 2px solid #4A2c2a;
+}
+
+.home {
+  background-image: linear-gradient(to top, rgba(74, 44, 42, 0.8431372549), rgba(82, 59, 53, 0.1098039216)), url("../images/blackLaw.jpeg");
+  width: auto;
+  height: 550px;
+  background-position: center;
+}
+.home__intro {
+  text-align: center;
+}
+.home__intro--welcome {
+  padding-top: 30%;
+}
+.home__intro--header {
+  font-family: "Merriweather", serif;
+  font-size: 1.5em;
+  width: 95%;
+  margin: auto;
+}
+.home__intro--subheader {
+  font-family: "Merriweather", serif;
+  font-size: 1em;
+  font-weight: bold;
+  width: 80%;
+  margin: auto;
+  padding-top: 10%;
+}
+.home__intro--button {
+  margin-top: 0%;
+  border-style: none;
+  padding: 3%;
+  margin-top: 5%;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
+  border: 2px solid #c19A6b;
+  color: #c19A6b;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  background-color: #ddcebc;
+}
+.about__bio {
+  text-align: center;
+  margin-top: 5%;
+}
+.about__bio--header {
+  color: #4A2c2a;
+  font-family: "Roboto Condensed", sans-serif;
+}
+.about__bio--paragraph {
+  color: #4A2c2a;
+  font-family: "Lato", sans-serif;
+  width: 90%;
+  text-align: center;
+  margin-left: 5%;
+}
+.about__content {
+  margin-left: 30%;
+  margin-top: 10%;
+}
+.about__content--image {
+  width: 60%;
+  position: relative;
+  border-radius: 2%;
+  box-shadow: 0px 2px 5px rgb(100, 53, 2);
+}
+.about__content--border {
+  width: 200px;
+  height: 250px;
+  position: absolute;
+  top: 115%;
+  border-bottom: #c19A6b 10px solid;
+  border-right: #c19A6b 10px solid;
+  border-radius: 1%;
+}
+
+.services {
+  text-align: center;
+}
+.services__service {
+  width: 40%;
+  margin: auto;
+  border: rgba(74, 44, 42, 0.4392156863) 2px solid;
+  margin-bottom: 10%;
+  padding: 5%;
+  border-radius: 5%;
+  background-color: #4A2c2a;
+  box-shadow: 0px 2px 5px rgb(100, 53, 2);
+}
+.services__tittle {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 2em;
+  color: #4A2c2a;
+}
+.services__service--tittle {
+  color: #c19A6b;
+  font-family: "Merriweather", serif;
+}
+.services__service--description {
+  color: #ddcebc;
+  font-family: "Lato", serif;
+}
+.services__service--icon {
+  margin-right: 5%;
+}
+
+.contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: #4A2c2a;
+  padding: 5%;
+}
+.contact__socials {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 15%;
+}
+.contact__socials--container {
+  display: flex;
+  gap: 5px;
+}
+.contact__social--tittle {
+  color: #eadfd2;
+  font-family: "Roboto Condensed", sans-serif;
+}
+.contact__social {
+  width: 40px;
+}
+.contact__form {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.contact__button {
+  font-family: "Lato", sans-serif;
+  border-style: none;
+  width: 12em;
+  height: 3em;
+  margin-left: 10%;
+  border-radius: 6px;
+  font-weight: 800;
+}
+.contact__form--tittle {
+  color: #ddcebc;
+  font: 1.5em "Roboto Condensed";
+}
+
+input {
+  border-style: none;
+  width: 15em;
+  height: 3em;
+  border-radius: 6px;
+  padding: 0%;
+  background-color: rgba(206, 187, 164, 0.2196078431);
+  color: #ddcebc;
+  font-family: "Lato", sans-serif;
+}
+
+input:nth-child(4) {
+  height: 6em;
+}/*# sourceMappingURL=index.css.map */
