--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&family=Raleway:ital,wght@1,500&family=Roboto+Condensed:wght@300&family=Roboto:wght@300&display=swap");
-html {
-  margin: 0%;
-}
-
-body {
-  margin: 0%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .nav {
@@ -16,30 +14,6 @@ body {
   width: 100%;
   height: 60px;
 }
-.nav__menu {
-  position: fixed;
-  transform: translateY(-100%);
-  transition: transform 0.2s;
-  top: 99;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 99;
-  background: black;
-  color: white;
-  list-style: none;
-  padding-top: 4rem;
-}
-.nav__hamburger {
-  position: fixed;
-  z-index: 100;
-  top: 1%;
-  right: 1rem;
-  padding: 4px;
-  border: #4A2c2a solid 1px;
-  background: rgba(255, 255, 255, 0.065);
-  cursor: pointer;
-}
 .nav__logo {
   font-family: "Raleway", sans-serif;
   font-size: 2em;
@@ -49,7 +23,8 @@ body {
 .nav__logo--image {
   height: 60px;
 }
-.nav__menuItem {
+
+.menuItem {
   display: block;
   margin: 2rem 4rem;
   font-size: 1.8rem;
@@ -57,23 +32,69 @@ body {
   text-decoration: none;
 }
 
+.menuItem:hover {
+  text-decoration: underline;
+}
+
+.hamburger {
+  position: fixed;
+  z-index: 100;
+  top: 1rem;
+  right: 1rem;
+  padding: 4px;
+  border: #c19A6b;
+  background: #c19A6b;
+  cursor: pointer;
+}
+
+.closeIcon {
+  display: none;
+}
+
+.menu {
+  position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 5%;
+  z-index: 99;
+  background: #c19A6b;
+  color: white;
+  list-style: none;
+  padding-top: 4rem;
+}
+
+.showMenu {
+  transform: translateY(0);
+}
+
 .home {
-  background-image: linear-gradient(to top, rgba(74, 44, 42, 0.8431372549), rgba(82, 59, 53, 0.1098039216)), url("../images/blackLaw.jpeg");
-  width: auto;
-  height: 550px;
-  background-position: center;
+  background: url("../images/lady-justice.jpeg");
+  width: 100%;
+  height: 500px;
+  background-repeat: no-repeat;
 }
 .home__intro {
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 .home__intro--welcome {
   padding-top: 30%;
 }
+.home__intro--linda {
+  width: 50%;
+  opacity: 0.2;
+}
 .home__intro--header {
   font-family: "Merriweather", serif;
-  font-size: 1.5em;
+  font-size: 2em;
   width: 95%;
   margin: auto;
+  color: #eadfd2;
+  position: absolute;
 }
 .home__intro--subheader {
   font-family: "Merriweather", serif;
@@ -82,9 +103,10 @@ body {
   width: 80%;
   margin: auto;
   padding-top: 10%;
+  color: #eadfd2;
 }
 .home__intro--button {
-  margin-top: 0%;
+  margin-top: 5%;
   border-style: none;
   padding: 3%;
   margin-top: 5%;
@@ -92,6 +114,8 @@ body {
   font-weight: bold;
   border: 2px solid #c19A6b;
   color: #c19A6b;
+  width: 40%;
+  margin: auto;
 }
 
 .about {
@@ -99,6 +123,7 @@ body {
   flex-direction: column;
   margin: auto;
   background-color: #ddcebc;
+  padding-bottom: 5%;
 }
 .about__bio {
   text-align: center;
@@ -126,13 +151,23 @@ body {
   box-shadow: 0px 2px 5px rgb(100, 53, 2);
 }
 .about__content--border {
-  width: 200px;
+  width: 213px;
   height: 250px;
   position: absolute;
-  top: 115%;
+  top: 79%;
   border-bottom: #c19A6b 10px solid;
   border-right: #c19A6b 10px solid;
   border-radius: 1%;
+}
+.about__button {
+  margin-top: 0%;
+  border-style: none;
+  padding: 3%;
+  margin-top: 5%;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
+  border: 2px solid #c19A6b;
+  color: #c19A6b;
 }
 
 .services {
@@ -221,12 +256,4 @@ input {
 
 input:nth-child(4) {
   height: 6em;
-}
-
-.closeIcon {
-  display: none;
-}
-
-.showMenu {
-  transform: translateY(0);
 }/*# sourceMappingURL=index.css.map */
